2006-05-04  Peter Johanson  <peter@peterjohanson.com>

	* NEWS:
	* configure.in: Updated news info, and bump version for a 0.8.5pre1
	release.

2006-05-04  Peter Johanson  <peter@peterjohanson.com>

	* data/Makefile.am: Install the dbus .service file to the right
	location.
	* configure.in:
	* doc/Makefile.am: Small tweaks/hacks to make distcheck work finally.

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2006-04-14  Amanpreet Singh Alam <apbrar@gmail.com>

	*configure.in: "pa" Punjabi Language is added to ALL_LINGUAS

2006-03-21  Peter Johanson  <peter@peterjohanson.com>

	* src/PlaylistWindow.cs: Fix small bug in the visibility action
	changes.

2006-03-20  Peter Johanson  <peter@peterjohanson.com>

	* configure.in:
	* plugins/Makefile.am: Build inotify plugin conditional based on
	detected platform, and configure argument. See bug #329716.

2006-03-20  Peter Johanson  <peter@peterjohanson.com>

	* src/Actions.cs:
	* src/PlaylistWindow.cs: Change visibility Action to be a true
	ToggleAction, with check menu item, instead of switching between 'Show
	Window' and 'Hide Window' text.

2006-03-20  Peter Johanson  <peter@peterjohanson.com>

	* src/Actions.cs: Add clear playlist shortcut (Sebastian Heinlein in
	bug #319180), and change Previous mnemonic so as not to collide with
	Play mnemonic (Wouter Bolsterlee in bug #312509).

2006-03-13  Peter Johanson  <peter@peterjohanson.com>

	* README: Updated a few dependancy details.
	* doc/Makefile.am: Make parallel build safe.

2006-02-15  Peter Johanson <peter@peterjohanson.com>

	* README: Update the website URL.

2006-02-07  Peter Johanson <peter@peterjohanson.com>

	* configure.in: D'oh. Broke the 0.8 build stuff by dropping the
	gstreamer-gconf pkg-config foo.

2006-02-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added 'th' (Thai) to ALL_LINGUAS.

2006-02-02  Peter Johanson <peter@peterjohanson.com>
